; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_assert_in_array.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_assert_in_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i8* }

@.str = private unnamed_addr constant [45 x i8] c"json-writer: array: missing jw_array_begin()\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"json-writer: array: not in array\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.json_writer*)* @assert_in_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_in_array(%struct.json_writer* %0) #0 {
  %2 = alloca %struct.json_writer*, align 8
  store %struct.json_writer* %0, %struct.json_writer** %2, align 8
  %3 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %4 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = call i32 @BUG(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %1
  %11 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %12 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i8*, i8** %13, align 8
  %15 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %16 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = sub nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8, i8* %14, i64 %20
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp ne i32 %23, 91
  br i1 %24, label %25, label %27

25:                                               ; preds = %10
  %26 = call i32 @BUG(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  br label %27

27:                                               ; preds = %25, %10
  ret void
}

declare dso_local i32 @BUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
